src/main/java/com/example/sap_shop/error/EmptyCredentialException.java
package com.example.sap_shop.error;

public class EmptyCredentialException extends Exception{
    public EmptyCredentialException() {
        super("Some of the credentials are empty");
    }
}
